-memperbaiki format hyperlink (done) -Meletak log out pada profile scene agar lebih tersembunyi (done) -warna biru delete profile pic diubah menjadi merah juga menjadi kan set pic menjadi warna biru agar lebih matching (done) -konfirmasi untuk delete profile pic dan logout (done) -letak action kembali di kiri (done) -rename variable button 123 menjadi nama yang lebih mudah di identifikasi (done) -tambahkan scroll bar pada leaderboard (done) -post terurut dari yang paling banyak help point nya (done)

--- a/app/src/main/resources/profileStyle.css
+++ b/app/src/main/resources/profileStyle.css
@@ -16,7 +16,7 @@
 }
 
 #change-image-button {
-    -fx-background-color: #6a0dad;
+    -fx-background-color: #320dad;
     -fx-text-fill: white; 
     -fx-font-size: 8px; 
     -fx-translate-x: 40;
@@ -24,7 +24,7 @@
 }
 
 #delete-image-button {
-    -fx-background-color: #6a0dad;
+    -fx-background-color: #ad0d0d;
     -fx-text-fill: white; 
     -fx-font-size: 8px; 
     -fx-translate-x: -40;
